--- a/tuto1.html
+++ b/tuto1.html
@@ -6,6 +6,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How to Create A Simple Footer Using CSS Flexbox &nbsp; Grid</title>
     <link rel="stylesheet" href="./css/tuto1.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="content">
+      <footer>
+        <div class="newsletter">
+          <h1>Subscribe</h1>
+          <p>Enter your email to receive relevant messaging tips and example</p>
+          <form action="#">
+            <input type="text" placeholder="E-mail" />
+            <button type="button" class="btn">Subscribe</button>
+          </form>
+        </div>
+        <hr>
+        <!-- Container -->
+          <div class="main">
+            <!-- Column -->
+            <div>
+              <h2>Brand name</h2>
+              <p>Copyright &copy; 2022</p>
+              <p>Created by company Name</p>
+            </div>
+            <!-- Column -->
+            <div>
+              <h2>Product</h2>
+              <ul>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Customers</a></li>
+                <li><a href="#">Application</a></li>
+              </ul>
+            </div>
+           <!-- Column -->
+            <div>
+              <h2>company</h2>
+              <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <!-- Column -->
+            <div>
+              <h2>help</h2>
+              <ul>
+                <li><a href="#">Getting Started</a></li>
+                <li><a href="#">Feedback</a></li>
+                <li><a href="#">Referral Program</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+            <!-- Column -->
+            <div>
+              <h2>social</h2>
+              <li><a href=""><i class="fab fa-twitter">Twitter</i></a></li>
+              <li><a href=""><i class="fab fa-facebook">Facebook</i></a></li>
+              <li><a href=""><i class="fab fa-instagram">Instagram</i></a></li>
+              <li><a href=""><i class="fab fa-google-plus-g">Google</i></a></li>
+            </div>
+
+            <!--   -->
+          </div>
+        </hr>
+      </footer>
+    </div>
+  </body>
 </html>
